resources/assets/sass/main.scss
/* ... */
#event-content{
  background: #0079b8;
}

.br-events-months{
  .monthly-events {
    padding-top: 20px;
    }
  .event-banner{
    position: relative;
    min-height:320px;
    @media #{$tab-only}{
      min-height:240px;
    }
    .event-banner--info{
      position: absolute;
      width: 100%;
      height: 100%;
      top: 0;
      left: 0;
      z-index: 999999;
      .banner--info{
          max-width: 750px;
          padding-top:50px;
      }
      h1{
        margin: 25px 0 10px;
        font-size: 40px;
        line-height: 1.2;
        text-transform: uppercase;
        color: $white;
      }
      .br-info{
          font-size: 16px;
          line-height: 1.4;
          color:$white;
      }
    }
  }
.content-asset {
  a {
    color: #1678bd;
    text-decoration: none;
    overflow: hidden;
  }
  .location {
    display: block;
    font-size: 15px;
    line-height: normal;
    margin-bottom: 4%;
    color: #6d665f;
  }
  .events-top {
    overflow: hidden;
    margin-bottom: 50px;
  }
  .cta.backtoevent > span {
    display: block;
    float: left;
    line-height: 22px;
    margin-right: 5px;
    transform: rotate(180deg);
    }
  .monthly-event-list {
    overflow: hidden;
    li {
    display: block;
    float: left;
    margin: 0 3% 4% 0;
    width: 29%;
    min-height: 475px;
    list-style: square outside none;
    }
    .event-title {
    color: #00ae95;
    display: block;
    font-family: neosansstd-blackitalic;
    font-size: 34px;
    line-height: 34px;
    margin-bottom: 5px;
    text-transform: uppercase;
    height: 100px;
    overflow: hidden;
    }
    .eventdate {
    color: #67c9cf;
    display: block;
    font-family: neosansstd-bold;
    font-size: 24px;
    line-height: 33px;
    text-transform: uppercase;
    } 
    .event-img-main {
    margin-bottom: 4%;
    img{
      max-width: 100%;
    }
    }
  }
ul {
  margin: 0;
  padding: 0;
  line-height: 1.5em;
  }
.main-events  {
  li{
    margin: 0;
    padding: 0;
    list-style: square outside none;
  a {
    display: block;
    height: 363px;
    margin: 0 auto;
    .listevents {
    color: #fff;
    margin: 50px auto;
    position: relative;
    width: 1020px;
    z-index: 99;
    height: 70%;
     @media #{$tab-only}{
      margin: 3%;
      width: 90%;
     }
    h2 {
    color: #fff;
    font-size: 52px;
    @extend %extrabold-font;
    line-height: 50px;
    margin:0;
    }
    p {
    margin: 10px 0;
    width: 60%;
    @extend %bold-font;      
    }
    .cta{.white {
      text-transform: capitalize;}
    }
    img {
    position: absolute;
    top: 0;
    max-width: none;
    max-height: 100%;
    left: auto !important;
    right: 0;
          }
        }
      }
    }
   }
 .main-events > li {
  height: 363px;
  overflow: hidden;
  position: relative;
  width: 100%;
  }
  .cta {
  cursor: pointer;
  font-size: 1.1em;
  text-transform: none;
  @extend %extrabold-font;
  &:after {
  content: "➤";
  font-family: Zapf Dingbats;
  padding-left: 5px;
  position: relative;
  bottom: 0;
  }
  &:hover {
    color: #42bac5;
    }
  }
}
.events-btn{
  width: 100%;
  max-width: 450px;
  float: right;
  margin-top: 3%;
  padding:0px 45px 10px 0px;
 span{
   float:left;
   width:50%;
   padding-right:12px;
    @media #{$mobile-only}{
      padding-right:8px;
    }
    .secondary-button{
    text-align:center;
    border: 2px solid $blue;
    background:$blue;
    color: $white !important;
    text-decoration:none;
    font-size:17px;
    &:hover {
    background: #42bac5!important;
    border: 2px solid #42bac5!important;
    }
    @media #{$mobile-only}{ 
    width:100%;
    min-width:100px;
      }
    } 
  }
    @media #{$mobile-only}{ 
    padding-top:20px;
    margin:0 auto;
    display:block;
    float:none;
    }
    @media #{$tab-only}{
    margin-top: 8%;
    }
 }

}
.backtoevent{
  float:right;
  margin-top:12px;
}


/* Events- End*/

